[gd_scene load_steps=11 format=3 uid="uid://b1tluf6bya11l"]

[ext_resource type="Script" path="res://scripts/Extraction/Sensor/data_user.gd" id="1_0ob14"]
[ext_resource type="Script" path="res://scripts/Common/showLoggedInAs.gd" id="2_i4l7v"]
[ext_resource type="Script" path="res://scripts/Extraction/ShowConnected.gd" id="3_ak075"]
[ext_resource type="Texture2D" uid="uid://jn2edbaf0g6y" path="res://assets/connected.svg" id="4_uka1a"]
[ext_resource type="Texture2D" uid="uid://bxtjqe348c13g" path="res://assets/disconnected.svg" id="5_egje7"]
[ext_resource type="Script" path="res://scripts/Extraction/Extraction_finished.gd" id="6_msgkl"]
[ext_resource type="Script" path="res://scripts/Extraction/DebugButton.gd" id="7_jhp4k"]
[ext_resource type="FontFile" uid="uid://w6rhidxui6pe" path="res://assets/NotoSansMono-Regular.ttf" id="7_pt815"]
[ext_resource type="Script" path="res://scripts/Extraction/DebugInfo.gd" id="9_yq4k5"]
[ext_resource type="Script" path="res://scripts/Extraction/Terug.gd" id="10_dbgyb"]

[node name="Node3D2" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.603208, 0.797584, 0, 0.797584, 0.603208, -1, 2.63671e-08, -3.48635e-08, 4.979, 3.748, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="."]
script = ExtResource("1_0ob14")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.022199, -0.788643, 0.61445, -9.77091e-09, 0.614602, 0.788838, -0.999754, 0.0175114, -0.0136435, -7.39606, 5.13621, 2.08942)
light_energy = 1.914

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -177.0
offset_bottom = 30.0
grow_horizontal = 0
text = "Logged in as: "
fit_content = true
autowrap_mode = 0
script = ExtResource("2_i4l7v")

[node name="MarginContainer" type="MarginContainer" parent="." node_paths=PackedStringArray("connectedSprite", "disconnectedSprite")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -649.0
offset_right = 40.0
offset_bottom = -608.0
grow_vertical = 0
script = ExtResource("3_ak075")
connectedSprite = NodePath("Connected")
disconnectedSprite = NodePath("Disconnected")

[node name="Connected" type="Sprite2D" parent="MarginContainer"]
visible = false
position = Vector2(42.925, 615.95)
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_uka1a")

[node name="Disconnected" type="Sprite2D" parent="MarginContainer"]
position = Vector2(42.925, 615.95)
scale = Vector2(0.0497904, 0.0497903)
texture = ExtResource("5_egje7")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Disconnected"]
offset_left = 363.022
offset_top = -320.344
offset_right = 586.022
offset_bottom = -289.344
scale = Vector2(20, 20)
theme_override_font_sizes/normal_font_size = 20
text = "Sensor disconnected"
fit_content = true

[node name="Button" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -60.0
offset_right = -23.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Finished extraction"
script = ExtResource("6_msgkl")

[node name="DebugButton" type="Button" parent="." node_paths=PackedStringArray("debugText")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = -78.0
offset_right = 83.0
offset_bottom = -55.0
grow_vertical = 0
toggle_mode = true
text = "Debug â–¶"
script = ExtResource("7_jhp4k")
debugText = NodePath("DebugInfo")

[node name="DebugInfo" type="RichTextLabel" parent="DebugButton"]
visible = false
layout_mode = 0
offset_top = -77.0
offset_right = 439.0
offset_bottom = -4.0
theme_override_fonts/normal_font = ExtResource("7_pt815")
text = "Debug info
a
a"
fit_content = true
script = ExtResource("9_yq4k5")

[node name="Terug" type="Button" parent="."]
offset_left = 41.0
offset_top = 23.0
offset_right = 94.0
offset_bottom = 54.0
text = "Terug"
script = ExtResource("10_dbgyb")

[connection signal="connected" from="CSGBox3D" to="MarginContainer" method="showConnected"]
[connection signal="connected" from="CSGBox3D" to="DebugButton/DebugInfo" method="on_sensor_connected"]
[connection signal="data" from="CSGBox3D" to="DebugButton/DebugInfo" method="receiveData"]
[connection signal="disconnected" from="CSGBox3D" to="MarginContainer" method="showDisconnected"]
[connection signal="disconnected" from="CSGBox3D" to="DebugButton/DebugInfo" method="on_sensor_disconnected"]
